@@ -7,6 +7,7 @@
           New Boxes:
             Autopilot Reefing Control
             Log, Total and Trip. Thanks to Mike K for the suggestion.
+            Custom App Launcher, Thanks to Mikhail G for the idea.
 
           Box updates:
             SunlightBox: now aligned at top.
